--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -1,33 +1,34 @@
 project:
-  name: cfn-sample-template
-  owner: quickstart@amazon.com
-  package_lambda: false
+  name: quickstart-ibm-liberty-eks
+  shorten_stack_name: true
   regions:
-  - ap-northeast-1
-  - ap-northeast-2
-  - ap-southeast-1
-  - ap-southeast-2
-  - eu-central-1
+  - ca-central-1
   - eu-west-1
-  - sa-east-1
-  - us-east-1
-  - us-west-1
-  - us-west-2
+  package_lambda: false
 tests:
-  sample:
+  liberty-eks-with-app:
+    template: ./templates/ibm-liberty-new-eks-with-app.template.yaml
     parameters:
-      Param1: 'Inputs to Stack'
-      # Examples: of other taskcat dynamic input parameters for more into see http://taskcat.io
-      #
-      #      AvailabilityZones: $[taskcat_genaz_3]
-      #      ByteValue: 1
-      #      PasswordA: $[taskcat_genpass_8A]
-      #      PasswordB: $[taskcat_genpass_32S]
-      #      RandomNumber: $[taskcat_random-numbers]
-      #      RandomString: $[taskcat_random-string]
-      #      StackName: TestStack
-      #      UUID: $[taskcat_genuuid]
-      #
+      EKSClusterName: was-cluster-$[taskcat_random-string]
+      SetupNewECR: "Yes"
+      AcceptLicense: "Accept: Proceed with the installation"
+      LicenseEdition: "IBM WebSphere Application Server"
+      LicenseProductEntitlementSource: "Standalone"
+      AppContainerImageURL: icr.io/appcafe/open-liberty/samples/getting-started
+      QSS3BucketName: $[taskcat_autobucket]
+      QSS3BucketRegion: $[taskcat_current_region]
+      QSS3KeyPrefix: $[taskcat_project_name]/
+      AvailabilityZones: $[taskcat_genaz_2]
     regions:
-    - us-east-2
-    template: templates/another-workload.template.yaml
+      - ca-central-1      
+  liberty-eks-no-app:
+    template: ./templates/ibm-liberty-new-eks-no-app.template.yaml
+    parameters:
+      EKSClusterName: was-cluster-$[taskcat_random-string]
+      SetupNewECR: "Yes"
+      QSS3BucketName: $[taskcat_autobucket]
+      QSS3BucketRegion: $[taskcat_current_region]
+      QSS3KeyPrefix: $[taskcat_project_name]/
+      AvailabilityZones: $[taskcat_genaz_2]
+    regions:
+      - eu-west-1      
