--- a/templates/ibm-liberty-new-eks-with-app.template.yaml
+++ b/templates/ibm-liberty-new-eks-with-app.template.yaml
@@ -132,7 +132,7 @@ Parameters:
     ConstraintDescription: >-
       The S3 bucket name can include numbers, lowercase letters,
       and hyphens (-), but it cannot start or end with a hyphen.
-    Default: aws-ia-us-east-1
+    Default: aws-ia
     Description: >-
       Name of the S3 bucket for your copy of the deployment assets. Keep the default
       name unless you are customizing the template. Changing the name updates code
@@ -170,7 +170,7 @@ Parameters:
     Type: String
 
 Conditions:
-  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, aws-quickstart]
+  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, aws-ia]
   SetupECR: !Equals [!Ref SetupNewECR, "Yes"]
   DeploySample: !Equals [!Ref DeployApp, Sample]
 
